--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
         OAS_PATH: "_open_api/api_specs/definitions"
         FORCE_COLOR: true
       run: |
-        ./node_modules/.bin/alex _documentation/en _partials _modals _tutorials/en
+        ./node_modules/.bin/alex _documentation/en _partials _modals _tutorials/en _use_cases/en
     - name: Run rake tasks
       env:
         POSTGRES_USERNAME: postgres
